--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello, CloudGaaP (JavaScript)!</h1>
+      <h1>Hello, CloudGaaP (TypeScript)!</h1>
     </div>
 
     <!-- JS -->
